--- a/bits/Makefile
+++ b/bits/Makefile
@@ -11,7 +11,7 @@ CPPFLAGS=-P -C -Wno-invalid-pp-token -fdollars-in-identifiers -nostdinc -Wundef 
 
 .PHONY: lib
 lib: init $(JSFILES)
-	for i in $(LIBS); do cpp $(CPPFLAGS) $$i | uniq > $(OUTDIR)/$$i; done
+	for i in $(LIBS); do cpp $(CPPFLAGS) $$i | awk 'BEGIN{last=-3} NF>0 {last=NR} last >= NR-1' > $(OUTDIR)/$$i; done
 
 .PHONY: init
 init: 30_ctypes.js
