--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "printj",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"author": "sheetjs",
 	"description": "Pure-JS printf",
 	"keywords": [ "printf", "sprintf", "format", "string" ],
@@ -29,7 +29,7 @@
 		}
 	},
 	"homepage": "http://sheetjs.com/opensource",
-	"files": ["printj.js", "bin/printj.njs", "LICENSE", "README.md", "dist/*.js", "dist/*.map", "dist/LICENSE"],
+	"files": ["printj.js", "bin/printj.njs", "LICENSE", "README.md", "dist/*.js", "dist/*.map", "dist/LICENSE", "types/index.d.ts", "types/*.json"],
 	"bugs": { "url": "https://github.com/SheetJS/printj/issues" },
 	"license": "Apache-2.0",
 	"engines": { "node": ">=0.8" }
