--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "printj",
-	"version": "1.0.2",
+	"version": "1.1.0",
 	"author": "sheetjs",
 	"description": "Pure-JS printf",
 	"keywords": [ "printf", "sprintf", "format", "string" ],
@@ -12,9 +12,10 @@
 	"dependencies": {
 	},
 	"devDependencies": {
-		"mocha":"",
-		"@sheetjs/uglify-js":"",
-		"@types/node":"",
+		"mocha":"~2.5.3",
+		"blanket": "~1.2.3",
+		"@sheetjs/uglify-js":"~2.7.3",
+		"@types/node":"^8.0.7",
 		"dtslint": "^0.1.2",
 		"typescript": "2.2.0"
 	},
