--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "printj",
-	"version": "1.1.2",
+	"version": "1.2.0",
 	"author": "sheetjs",
 	"description": "Pure-JS printf",
 	"keywords": [
@@ -49,7 +49,7 @@
 		]
 	},
 	"homepage": "http://sheetjs.com/opensource",
-	"files": ["printj.js", "bin/printj.njs", "LICENSE", "README.md", "dist/*.js", "dist/*.map", "dist/LICENSE", "types/index.d.ts", "types/*.json"],
+	"files": ["printj.js", "printj.mjs", "bin/printj.njs", "LICENSE", "README.md", "dist/*.js", "dist/*.map", "dist/LICENSE", "types/index.d.ts", "types/*.json"],
 	"bugs": {
 		"url": "https://github.com/SheetJS/printj/issues"
 	},
