feat: use str.repeat for padding (fixes #4)
feat: add str.repeat polyfill for older browsers

feat: add module field to package.json

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"printj": "./bin/printj.njs"
 	},
 	"main": "./printj",
+	"module": "./print.mjs",
 	"types": "types",
 	"browser": {
 		"process": false,
