--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "printj",
-	"version": "1.2.3",
+	"version": "1.3.0",
 	"author": "sheetjs",
 	"description": "Pure-JS printf",
 	"keywords": [
@@ -22,11 +22,11 @@
 	"dependencies": {
 	},
 	"devDependencies": {
-		"mocha": "~2.5.3",
-		"blanket": "~1.2.3",
 		"@sheetjs/uglify-js": "~2.7.3",
 		"@types/node": "^8.0.7",
+		"blanket": "~1.2.3",
 		"dtslint": "^0.1.2",
+		"mocha": "~2.5.3",
 		"typescript": "2.2.0"
 	},
 	"repository": {
@@ -46,11 +46,14 @@
 	},
 	"alex": {
 		"allow": [
-			"period", "just", "special", "invalid"
+			"special",
+			"period",
+			"just",
+			"invalid"
 		]
 	},
-	"homepage": "http://sheetjs.com/opensource",
-	"files": ["printj.js", "printj.mjs", "bin/printj.njs", "LICENSE", "README.md", "dist/*.js", "dist/*.map", "dist/LICENSE", "types/index.d.ts", "types/*.json"],
+	"homepage": "https://sheetjs.com/",
+	"files": ["printj.js", "printj.mjs", "bin/printj.njs", "LICENSE", "README.md", "shim.js", "dist/*.js", "dist/*.map", "dist/LICENSE", "types/index.d.ts", "types/*.json"],
 	"bugs": {
 		"url": "https://github.com/SheetJS/printj/issues"
 	},
